--- a/essai3.html
+++ b/essai3.html
@@ -1,3 +1,6 @@
+<link href="style.css" rel="stylesheet">
+
+
 <h1 id="welcome-to-stackedit">Welcome to StackEdit!</h1>
 <p>Hi! I’m your first Markdown file in <strong>StackEdit</strong>. If you want to learn about StackEdit, you can read me. If you want to play with Markdown, you can edit me. Once you have finished with me, you can create new files by opening the <strong>file explorer</strong> on the left corner of the navigation bar.</p>
 <h1 id="files">Files</h1>
