--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -16,6 +16,12 @@
 	
 	<h1> NSI en terminale</h1>
 
+	
+	<ul>
+			<li> Les algorithmes de recherches séquentielles <a href="grand_oral.pdf">(pdf)</a> </li>
+	</ul>
+	
+	
 	<section>
         <h2>Réussir l'épreuve pratique</h2>
         
