--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -18,7 +18,7 @@
 
 	
 	<ul>
-			<li> Les algorithmes de recherches séquentielles <a href="grand_oral.pdf">(pdf)</a> </li>
+			<li> Grand oral <a href="grand_oral.pdf">(pdf)</a> </li>
 	</ul>
 	
 	
