--- a/nsi/t2/index.html
+++ b/nsi/t2/index.html
@@ -27,7 +27,7 @@
     </button>
   </div>
   <div class="block w-full h-full z-10" id="chapitreMenu"></div>
-  <div class="flex flex-row" style="overflow : auto" id="chapitre-pdf">
+  <div class="flex flex-row" style="overflow : scroll" id="chapitre-pdf">
     <div class="hidden lg:block shadow-2xl w-4/12 max-w-sm" id="chapitre">
       <!-- Tous les chapitres -->
     </div>
