--- a/nsi/t2/index.html
+++ b/nsi/t2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <title>Nsi Terminale</title>
 </head>
 
-<body>
+<body class="h-screen">
   <div class="p-8 place-self-center w-full flex justify-between ">
     <h1 class="font-extrabold font-sans text-opacity-90 text-2xl"> NSI Terminale </h1>
     <div class="align-left block lg:hidden" id="divMenu">
@@ -26,21 +26,21 @@
       </svg>
     </button>
   </div>
-  <div class="block w-full h-full z-10" id="chapitreMenu"></div>
-  <div class="flex flex-row" id="chapitre-pdf">
-    <div class="hidden lg:block shadow-2xl w-4/12 max-w-sm" id="chapitre">
+  <div class="hidden w-full h-full z-10" id="chapitreMenu"></div>
+  <div class="flex flex-row" style="height: 78%" id="chapitre-pdf">
+    <div class="overflow-auto hidden lg:block shadow-2xl w-4/12 max-w-sm" id="chapitre">
       <!-- Tous les chapitres -->
     </div>
     <div class="block w-full lg:ml-4">
       <!-- pdf -->
       <iframe id="pdf" src="" title="webviewer" frameborder="0"
-        class="w-full max-h-screen shadow-2xl h-screen lg:h-full lg:max-h-full"></iframe>
+        class="w-full shadow-2xl" style="height: 100%"></iframe>
     </div>
   </div>
   <script src="PDFJS/build/pdf.js"></script>
   <script src="main.js"></script>
 </body>
-<footer>
+<footer id="footer" class="block">
   <div class="flex justify-between p-8">
     <div>
       <a href="https://www.institutdegenech.fr/fr/accueil/" class="hover:bg-gray-400">Institut de Genech</a>
