--- a/m/2/index.html
+++ b/m/2/index.html
@@ -14,10 +14,10 @@
 
     <nav>
       <ul id="menu">
-		<li><a href="#">  Accueil  </a></li>
-        <li><a href="#">  Les cours et savoir-faire  </a></li>
-        <li><a href="#">  Python  </a></li>
-        <li><a href="#">  Logiciels  </a></li>
+		<li><a href="accueil.html">  Accueil  </a></li>
+        <li><a href="index.html">  Les cours et savoir-faire  </a></li>
+        <li><a href="python.html">  Python  </a></li>
+        <li><a href="logiciel.html">  Logiciels  </a></li>
         
       </ul>
     </nav>
