--- a/m/2/logiciel.html
+++ b/m/2/logiciel.html
@@ -10,7 +10,7 @@
   
   <body>
   <div id="conteneur">    
-    <h1 id="header"><a href="#" title="Accueil"><span>Colored Design</span></a></h1>
+    <h1 id="header"><a href="#" title="Accueil"><span>jb duthoit</span></a></h1>
 
     <nav>
       <ul id="menu">
