--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -25,7 +25,7 @@
 	
 	<div id="projet">
 	<h2> Les projets en html et css </h2>
-	<a class="autre" href= "projets/index" > Voir le travail réalisé par les élèves </a>
+	<a class="autre" href= "projets/index" target="_blank"> Voir le travail réalisé par les élèves </a>
 	
 	</div>
 	
@@ -33,8 +33,10 @@
     <div id="contenu_cours">
 		<h2>Initiation Python</h2>
 			
-		<p> <a href="nsi_1_ch1.pdf">  Le cours et les exos  </a> </p>
-		
+		<p> <a href="nsi_1_init_python_1.pdf">  Découvrir le langage Python </a> </p>
+		<p> <a href="nsi_1_init_python_2.pdf">  Les stuctures SI ALORS, POUR et TANT QUE... </a> </p>
+		<p> <a href="nsi_1_init_python_3.pdf">  Les fonctions pythons</a> </p>
+		<p> <a href="nsi_1_init_python_4.pdf">  Les séquences : tuple et tableau </a> </p>
 		
 		<h2>Représentation des données</h2>
 			
