--- a/m/1/index.html
+++ b/m/1/index.html
@@ -95,6 +95,14 @@
 		<p> <a href="m_1_va_2.pdf", target="_blank">  Variance d'une variable aléatoire  </a> </p>
 	
 		
+		<h2>Le produit scalaire</h2>
+		
+		
+		
+		<p> <a href="m_1_prod_scal_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p>
+		<p> <a href="m_1_prod_scal_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p>
+		<p> <a href="m_1_prod_scal_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p>
+	
 		
     </div>
     
