--- a/m/2/index.html
+++ b/m/2/index.html
@@ -60,6 +60,15 @@
 		<p> <a href="m_2_info_2.pdf", target="_blank">  Evolution  </a> </p>
 		<p> <a href="m_2_info_3.pdf", target="_blank">  Hors-programme : les indices </a> </p>
 		
+		
+		<h2>Comprendre Python</h2>
+		
+		
+		<p> <a class="autre" href="py1.gif", target="_blank">  Mémento Python (affectation, type de données, affichage)  </a> </p>
+		<p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p>
+		
+		
+		<p> <a href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p>
 			
 			
 			
