--- a/m/2/index.html
+++ b/m/2/index.html
@@ -68,7 +68,7 @@
 		<p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p>
 		
 		
-		<p> <a href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p>
+		<p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p>
 			
 			
 			
