--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -110,6 +110,16 @@
 		<p> <a class="td" href="nsi_1_reseaux_5.pdf", target="_blank">  Simuler un réseau</a> </p>
 		<p> <a class="autre"  href="nsi_1_reseaux_6.pdf", target="_blank">  Annexes </a> </p>
 	
+		<h2>Intéraction Homme-MAchine</h2>
+		
+		
+		
+		<p> <a href="nsi_1_ihm_1.pdf", target="_blank">  Intro </a> </p>
+		<p> <a href="nsi_1_ihm_2.pdf", target="_blank">  HTML, CSS et formualires </a> </p>
+		<p> <a href="nsi_1_ihm_3.pdf", target="_blank">  Le JavaScript </a> </p>
+		<p> <a href="nsi_1_ihm_4.pdf", target="_blank">  Requête HTTP </a> </p>
+		<p> <a class="autre" href="nsi_1_ihm_5.pdf", target="_blank">  Exemple de formulaire</a> </p>
+		<p> <a class="autre" href="nsi_1_ihm_6.pdf", target="_blank">  Hors programme: Développement web côté serveur</a> </p>
 	
 	</div>
     
