--- a/m/1/index.html
+++ b/m/1/index.html
@@ -102,7 +102,7 @@
 		<p> <a href="m_1_prod_scal_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p>
 		<p> <a href="m_1_prod_scal_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p>
 		<p> <a href="m_1_prod_scal_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p>
-	
+		<p> <a href="m_1_prod_scal_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p>
 		
     </div>
     
