--- a/m/1/index.html
+++ b/m/1/index.html
@@ -25,7 +25,7 @@
     <div id="contenu_cours">
 		<h2>Le second degré (partie 1)</h2>
 			
-		<p> <a href="maths_1_ch1.pdf">  Le cours  </a> </p>
+		<p> <a href="m_1_sec_part1_1.pdf">  Définition  </a> </p>
 		
 		
 		<h2>Les équations cartésiennes (chapitre de seconde)</h2>
