--- a/m/1/index.html
+++ b/m/1/index.html
@@ -25,84 +25,84 @@
     <div id="contenu_cours">
 		<h2>Le second degré (partie 1)</h2>
 			
-		<p> <a href="m_1_sec_part1_1.pdf">  Définition  </a> </p>
+		<p> <a href="m_1_sec_part1_1.pdf">  Fonction polynôme du second degré </a> </p>
 		
 		
-		<h2>Les équations cartésiennes (chapitre de seconde)</h2>
+		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
 			
-		<p> <a href="maths_1_ch2.pdf">  Le cours  </a> </p>
+		<!-- <p> <a href="maths_1_ch2.pdf">  Le cours  </a> </p> -->
 		
-		<h2>Probabilités conditionnelles</h2>
+		<!-- <h2>Probabilités conditionnelles</h2> -->
 		
-		<p> <a href="m_1_ch3.pdf">  Le cours et les savoir-faire  </a> </p>
+		<!-- <p> <a href="m_1_ch3.pdf">  Le cours et les savoir-faire  </a> </p> -->
 		
-		<p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p>
+		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
-		<h2>Le nombre dérivé</h2>
+		<!-- <h2>Le nombre dérivé</h2> -->
 		
-		<p> <a href="m_1_ch4_act_1.pdf", target="_blank">  Activité préparatoire </a> </p>
-		<p> <a href="m_1_ch4.pdf", target="_blank">  Le cours et les savoir-faire </a> </p>
+		<!-- <p> <a href="m_1_ch4_act_1.pdf", target="_blank">  Activité préparatoire </a> </p> -->
+		<!-- <p> <a href="m_1_ch4.pdf", target="_blank">  Le cours et les savoir-faire </a> </p> -->
 		
 		
-		<h2>Partie 2 du second degré</h2>
+		<!-- <h2>Partie 2 du second degré</h2> -->
 		
-		<p> <a href="m_1_ch5.pdf", target="_blank">  Le cours et les savoir-faire </a> </p>
+		<!-- <p> <a href="m_1_ch5.pdf", target="_blank">  Le cours et les savoir-faire </a> </p> -->
 		
 			
 			
 			
-		<h2>Les fonctions dérivées</h2>
+		<!-- <h2>Les fonctions dérivées</h2> -->
 		
 		
 		
-		<p> <a href="m_1_ch6.pdf", target="_blank">  Le cours  </a> </p>
-		<p> <a class="autre" href="maths_1_cm_fonctions_derivees", target="_blank">  Carte mentale  </a> </p>
+		<!-- <p> <a href="m_1_ch6.pdf", target="_blank">  Le cours  </a> </p> -->
+		<!-- <p> <a class="autre" href="maths_1_cm_fonctions_derivees", target="_blank">  Carte mentale  </a> </p> -->
 		
 		
-		<h2>Les suites numériques</h2>
-		
-		
-		
-		<p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p>
-		<p> <a href="m_1_suites_2.pdf", target="_blank">  Les suites arithmétiques  </a> </p>
-		<p> <a href="m_1_suites_3.pdf", target="_blank">  Les suites géométriques  </a> </p>
-		<p> <a href="m_1_suites_4.pdf", target="_blank">  Variations de suites  </a> </p>
-		<p> <a href="m_1_suites_5.pdf", target="_blank">  Limites de suite </a> </p>
-		
-		
-		<h2>Trigonométrie</h2>
+		<!-- <h2>Les suites numériques</h2> -->
 		
 		
 		
-		<p> <a href="m_1_trigo_1.pdf", target="_blank">  Cercle trigonométrique et radian  </a> </p>
-		<p> <a href="m_1_trigo_2.pdf", target="_blank">  Repérage sur le cercle  </a> </p>
-		<p> <a href="m_1_trigo_3.pdf", target="_blank">  Cosinus et sinus  </a> </p>
-		<p> <a href="m_1_trigo_4.pdf", target="_blank">  Equations trigonométriques  </a> </p>
-		
-		<h2>Fonction exponnetielle</h2>
-		
+		<!-- <p> <a href="m_1_suites_1.pdf", target="_blank">  Définitions et mode de génération  </a> </p> -->
+		<!-- <p> <a href="m_1_suites_2.pdf", target="_blank">  Les suites arithmétiques  </a> </p> -->
+		<!-- <p> <a href="m_1_suites_3.pdf", target="_blank">  Les suites géométriques  </a> </p> -->
+		<!-- <p> <a href="m_1_suites_4.pdf", target="_blank">  Variations de suites  </a> </p> -->
+		<!-- <p> <a href="m_1_suites_5.pdf", target="_blank">  Limites de suite </a> </p> -->
 		
 		
-		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a> </p>
-		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
+		<!-- <h2>Trigonométrie</h2> -->
+		
+		
+		
+		<!-- <p> <a href="m_1_trigo_1.pdf", target="_blank">  Cercle trigonométrique et radian  </a> </p> -->
+		<!-- <p> <a href="m_1_trigo_2.pdf", target="_blank">  Repérage sur le cercle  </a> </p> -->
+		<!-- <p> <a href="m_1_trigo_3.pdf", target="_blank">  Cosinus et sinus  </a> </p> -->
+		<!-- <p> <a href="m_1_trigo_4.pdf", target="_blank">  Equations trigonométriques  </a> </p> -->
+		
+		<!-- <h2>Fonction exponnetielle</h2> -->
+		
+		
+		
+		<!-- <p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a> </p> -->
+		<!-- <p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p> -->
 	
 		
-		<h2>Les variables aléatoires</h2>
+		<!-- <h2>Les variables aléatoires</h2> -->
 		
 		
 		
-		<p> <a href="m_1_va_1.pdf", target="_blank">  La notion de variable aléatoire  </a> </p>
-		<p> <a href="m_1_va_2.pdf", target="_blank">  Variance d'une variable aléatoire  </a> </p>
+		<!-- <p> <a href="m_1_va_1.pdf", target="_blank">  La notion de variable aléatoire  </a> </p> -->
+		<!-- <p> <a href="m_1_va_2.pdf", target="_blank">  Variance d'une variable aléatoire  </a> </p> -->
 	
 		
-		<h2>Le produit scalaire</h2>
+		<!-- <h2>Le produit scalaire</h2> -->
 		
 		
 		
-		<p> <a href="m_1_prod_scal_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p>
-		<p> <a href="m_1_prod_scal_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p>
-		<p> <a href="m_1_prod_scal_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p>
-		<p> <a href="m_1_prod_scal_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p>
+		<!-- <p> <a href="m_1_prod_scal_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p> -->
+		<!-- <p> <a href="m_1_prod_scal_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p> -->
+		<!-- <p> <a href="m_1_prod_scal_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p> -->
+		<!-- <p> <a href="m_1_prod_scal_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p> -->
 		
     </div>
     
