--- a/m/2/index.html
+++ b/m/2/index.html
@@ -25,58 +25,58 @@
     <div id="contenu_cours">
 		<h2>Nombres et intervalles</h2>
 			
-		<p> <a href="m_2_ch1.pdf">  Le cours  </a> </p>
-		<h2>Généralités sur les fonctions</h2>
+		<p> <a href="m_2_ch1_1.pdf">  Les ensembles de nombres  </a> </p>
+		<!-- <h2>Généralités sur les fonctions</h2> -->
 			
-		<p> <a href="m_2_ch2.pdf">  Le cours  </a> </p>
-		<h2>Les vecteurs du plan</h2>
+		<!-- <p> <a href="m_2_ch2.pdf">  Le cours  </a> </p> -->
+		<!-- <h2>Les vecteurs du plan</h2> -->
 		
-		<p> <a href="m_2_ch3.pdf">  Le cours  </a> </p>
+		<!-- <p> <a href="m_2_ch3.pdf">  Le cours  </a> </p> -->
 		
-		<p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUhYQzk0MlJtb0FqdEgxR3hQaWlndldJb1VnU3Bzc1dGVHNiU2hWVjhKQ2MiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p>
+		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUhYQzk0MlJtb0FqdEgxR3hQaWlndldJb1VnU3Bzc1dGVHNiU2hWVjhKQ2MiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
-		<p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWRmNlprS2I4YlNidVlmNTVOaG1EOUNXYTlMdklOOGNhbFZ5bEdKMm02dm8iLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank"> Refaire l'interro </a> </p>
+		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWRmNlprS2I4YlNidVlmNTVOaG1EOUNXYTlMdklOOGNhbFZ5bEdKMm02dm8iLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank"> Refaire l'interro </a> </p> -->
 
-		<h2>Fonctions affines et tableaux de signes</h2>
+		<!-- <h2>Fonctions affines et tableaux de signes</h2> -->
 		
-		<p> <a href="m_2_fonctions_affines_1.pdf", target="_blank">  Définition et représentation graphique </a> </p>
-		<p> <a href="m_2_fonctions_affines_2.pdf", target="_blank">  Etude des variations et du signe </a> </p>
-		<p> <a href="m_2_fonctions_affines_3.pdf", target="_blank">  Tableaux de signes et Inéquations </a> </p>
+		<!-- <p> <a href="m_2_fonctions_affines_1.pdf", target="_blank">  Définition et représentation graphique </a> </p> -->
+		<!-- <p> <a href="m_2_fonctions_affines_2.pdf", target="_blank">  Etude des variations et du signe </a> </p> -->
+		<!-- <p> <a href="m_2_fonctions_affines_3.pdf", target="_blank">  Tableaux de signes et Inéquations </a> </p> -->
 		
 		
 		
-		<h2>Repèrage</h2>
+		<!-- <h2>Repèrage</h2> -->
 		
-		<p> <a href="m_2_repere_1.pdf", target="_blank">  Coordonnées d'un point </a> </p>
-		<p> <a href="m_2_repere_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p>
-		<p> <a href="m_2_repere_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p>
+		<!-- <p> <a href="m_2_repere_1.pdf", target="_blank">  Coordonnées d'un point </a> </p> -->
+		<!-- <p> <a href="m_2_repere_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p> -->
+		<!-- <p> <a href="m_2_repere_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p> -->
 		
 			
 			
 			
-		<h2>Informations chiffrées</h2>
+		<!-- <h2>Informations chiffrées</h2> -->
 		
-		<p> <a href="m_2_info_1.pdf", target="_blank">  Proportions et pourcentages  </a> </p>
-		<p> <a href="m_2_info_2.pdf", target="_blank">  Evolution  </a> </p>
-		<p> <a href="m_2_info_3.pdf", target="_blank">  Hors-programme : les indices </a> </p>
-		
-		
-		
-		<h2>Equations cartésiennes</h2>
-		
-		<p> <a href="m_2_eq_cart_1.pdf", target="_blank">  Equations cartésiennes  </a> </p>
-		<p> <a href="m_2_eq_cart_2.pdf", target="_blank">  Equation réduite  </a> </p>
-		<p> <a href="m_2_eq_cart_3.pdf", target="_blank">  Position relative de deux droites du plan  </a> </p>
-		<p> <a href="m_2_eq_cart_4.pdf", target="_blank">  Point d'intersection de deux droites du plan  </a> </p>
-		
-		<h2>Comprendre Python</h2>
+		<!-- <p> <a href="m_2_info_1.pdf", target="_blank">  Proportions et pourcentages  </a> </p> -->
+		<!-- <p> <a href="m_2_info_2.pdf", target="_blank">  Evolution  </a> </p> -->
+		<!-- <p> <a href="m_2_info_3.pdf", target="_blank">  Hors-programme : les indices </a> </p> -->
 		
 		
-		<p> <a class="autre" href="py1.gif", target="_blank">  Mémento Python (affectation, type de données, affichage)  </a> </p>
-		<p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p>
+		
+		<!-- <h2>Equations cartésiennes</h2> -->
+		
+		<!-- <p> <a href="m_2_eq_cart_1.pdf", target="_blank">  Equations cartésiennes  </a> </p> -->
+		<!-- <p> <a href="m_2_eq_cart_2.pdf", target="_blank">  Equation réduite  </a> </p> -->
+		<!-- <p> <a href="m_2_eq_cart_3.pdf", target="_blank">  Position relative de deux droites du plan  </a> </p> -->
+		<!-- <p> <a href="m_2_eq_cart_4.pdf", target="_blank">  Point d'intersection de deux droites du plan  </a> </p> -->
+		
+		<!-- <h2>Comprendre Python</h2> -->
 		
 		
-		<p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p>
+		<!-- <p> <a class="autre" href="py1.gif", target="_blank">  Mémento Python (affectation, type de données, affichage)  </a> </p> -->
+		<!-- <p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p> -->
+		
+		
+		<!-- <p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p> -->
 			
 			
 			
