--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -33,7 +33,7 @@
     <div id="contenu_cours">
 		<h2>Les bases de données </h2>
 			
-		<p> <a class="metier" https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees>  Découvrir le métier d'Administrateur de bases de données </a> </p>
+		<p> <a class="metier" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees">  Découvrir le métier d'Administrateur de bases de données </a> </p>
 		<p> <a href="nsi_1_init_python_1.pdf">  Découvrir les bases de données </a> </p>
 		<p> <a href="nsi_1_init_python_2.pdf">  Bases de données relationnelles </a> </p>
 		
