--- a/m/1/index.html
+++ b/m/1/index.html
@@ -26,7 +26,8 @@
 		<h2>Le second degré (partie 1)</h2>
 			
 		<p> <a href="m_1_sec_part1_1.pdf">  Fonction polynôme du second degré </a> </p>
-		
+		<p> <a href="m_1_sec_part1_2.pdf">  Variations de la fonction polynôme </a> </p>
+		<p> <a href="m_1_sec_part1_3.pdf">  Courbe représentative </a> </p>
 		
 		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
 			
