--- a/m/2/index.html
+++ b/m/2/index.html
@@ -69,12 +69,12 @@
 		<!-- <p> <a href="m_2_eq_cart_3.pdf", target="_blank">  Position relative de deux droites du plan  </a> </p> -->
 		<!-- <p> <a href="m_2_eq_cart_4.pdf", target="_blank">  Point d'intersection de deux droites du plan  </a> </p> -->
 		
-		<!-- <h2>Comprendre Python</h2> -->
+		<h2>Comprendre Python</h2>
 		
 		
-		<!-- <p> <a class="autre" href="py1.gif", target="_blank">  Mémento Python (affectation, type de données, affichage)  </a> </p> -->
-		<!-- <p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p> -->
-		
+		<p> <a class="autre" href="py1.gif", target="_blank">  Mémento Python (affectation, type de données, affichage)  </a> </p>
+		<p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p>
+		<p> <a class="td" href="m_2_python_1.pdf", target="_blank">  prise en main de Python  </a> </p>
 		
 		<!-- <p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p> -->
 			
