--- a/m/2/index.html
+++ b/m/2/index.html
@@ -26,6 +26,9 @@
 		<h2>Nombres et intervalles</h2>
 			
 		<p> <a href="m_2_ch1_1.pdf">  Les ensembles de nombres  </a> </p>
+		<p> <a href="m_2_ch1_2.pdf">  Les intervalles  </a> </p>
+		
+		
 		<!-- <h2>Généralités sur les fonctions</h2> -->
 			
 		<!-- <p> <a href="m_2_ch2.pdf">  Le cours  </a> </p> -->
