--- a/m/2/index.html
+++ b/m/2/index.html
@@ -27,6 +27,9 @@
 		<h2>Nombres et intervalles</h2>
 			
 		<p> <a href="m_2_ch1_1.pdf">  Les ensembles de nombres  </a> </p>
+		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMVlWRV9mSnJ1YkxoQzlRMl9VMkxQRXZ4YzRiYmZ0Qk5EZjJhaTllUjZ3b28iLCJ1c2VycyI6IkFub255bWUifQ=="> QCM pour s'entraîner avant l'IE </a> </p>
+		
+		
 		<p> <a href="m_2_ch1_2.pdf">  Les intervalles  </a> </p>
 		
 		
