--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -37,7 +37,7 @@
 		<p> <a href="nsi_t_bdd_1.pdf">  Découvrir les bases de données </a> </p>
 		<p> <a href="nsi_t_bdd_2.pdf">  Bases de données relationnelles </a> </p>
 		<p> <a href="nsi_t_bdd_3.pdf">  Le langage SQL sur un exemple</a> </p>
-		<p> <a href="nsi_t_bdd_4.pdf">  Et si on partait faire du ski à Val Cenis ?</a> </p>
+		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  Et si on partait faire du ski à Val Cenis ?</a> </p>
 
     
     <p id="footer">jb duthoit</p>
