--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -31,7 +31,7 @@
 	
 	
     <div id="contenu_cours">
-		<h2>Les bases de données </h2>
+		<h2>Les bases de données relationnelles</h2>
 			
 		<p> <a class="metier" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees">  Découvrir le métier d'Administrateur de bases de données </a> </p>
 		<p> <a href="nsi_t_bdd_1.pdf">  Découvrir les bases de données </a> </p>
