--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -38,6 +38,7 @@
 		<p> <a href="nsi_t_bdd_2.pdf">  Bases de données relationnelles </a> </p>
 		<p> <a href="nsi_t_bdd_3.pdf">  Le langage SQL sur un exemple</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
+		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
 
     
     <p id="footer">jb duthoit</p>
