--- a/m/1/index.html
+++ b/m/1/index.html
@@ -42,10 +42,10 @@
 		
 		<!-- <p> <a class= "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ==",target="_blank">  Se tester avec un QCM  </a> </p> -->
 		
-		<!-- <h2>Le nombre dérivé</h2> -->
+		<h2>Le nombre dérivé</h2>
 		
-		<!-- <p> <a href="m_1_ch4_act_1.pdf", target="_blank">  Activité préparatoire </a> </p> -->
-		<!-- <p> <a href="m_1_ch4.pdf", target="_blank">  Le cours et les savoir-faire </a> </p> -->
+		<p> <a href="m_1_derivation_app.pdf", target="_blank">  Activité préparatoire </a> </p>
+		<p> <a href="m_1_derivation_1.pdf", target="_blank">  Le nombre dérivé </a> </p>
 		
 		
 		<!-- <h2>Partie 2 du second degré</h2> -->
