--- a/m/1/index.html
+++ b/m/1/index.html
@@ -45,7 +45,12 @@
 		<h2>Le nombre dérivé</h2>
 		
 		<p> <a href="m_1_derivation_app.pdf", target="_blank">  Activité préparatoire </a> </p>
+		<p> <a class="autre" href="https://www.geogebra.org/m/re7scnj4", target="_blank">  Fichier Géogebra </a> </p>
 		<p> <a href="m_1_derivation_1.pdf", target="_blank">  Le nombre dérivé </a> </p>
+		<p> <a href="m_1_derivation_2.pdf", target="_blank">  Tangente à une courbe </a> </p>
+		<p> <a href="m_1_derivation_3.pdf", target="_blank">  Nombre dérivé de fonctions usuelles </a> </p>
+
+
 		
 		
 		<!-- <h2>Partie 2 du second degré</h2> -->
