--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -39,6 +39,7 @@
 		<p> <a href="nsi_t_bdd_3.pdf">  Le langage SQL sur un exemple</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
+		<p> <a class= "autre" href="nsi_t_flask.pdf"> Tuto Flask </a> </p>
 
     
     <p id="footer">jb duthoit</p>
