--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -27,8 +27,13 @@
 	<!-- # <h2> Les projets en html et css </h2> -->
 	<!-- # <a class="autre" href= "projets/index" target="_blank"> Voir le travail réalisé par les élèves </a> -->
 	<!-- # </div> -->
+	<div id="contenu_cours">
+		<h2>Réussir le grand oral</h2>
+		<p> <a class= "autre" href="grand_oral.pdf"> Granto </a> </p>
 	
-	
+	<div id="contenu_cours">
+		<h2>S'entraîner à lépreuve pratique</h2>
+		<p> <a class= "autre" href="nsi_t_epp_1.pdf"> Granto </a> </p>
 	
     <div id="contenu_cours">
 		<h2>Les bases de données relationnelles</h2>
@@ -60,10 +65,6 @@
 
 <!-- # - [Sujet zéro](sujet0.pdf) -->
 
-
-<!-- # Réussir le grand_oral	 -->
-
-<!-- # - [Réussir le Grand oral](grand_oral.pdf)	 -->
 
 <!-- # Réussir l'épreuve pratique -->
 <!-- # - [Les algorithmes de recherches séquentielles](nsi_t_rech_o.pdf) -->
