--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -33,8 +33,7 @@
 	
 	<div id="contenu_cours">
 		<h2>S'entraîner à lépreuve pratique</h2>
-		<p> <a class= "autre" href="URL
-https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb"> Sujet 1 </a> </p>
+		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb"> Sujet 1 </a> </p>
 	
 	
 	
