--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -38,10 +38,12 @@
 		<p> <a href="nsi_1_init_python_3.pdf">  Les fonctions pythons</a> </p>
 		<p> <a href="nsi_1_init_python_4.pdf">  Les séquences : tuple et tableau </a> </p>
 		
-		<!-- <h2>Représentation des données</h2> -->
+		<h2>Représentation des données</h2>
 			
-		<!-- <p> <a href="nsi_1_ch2.pdf">  Représentation des données en machine  </a> </p> -->
-		<!-- <p> <a class="video" href="https://youtube.com/channel/UCO0N4ExyrTAh4UdC14CZ5hQ">  Des vidéos pour mieux comprendre le binaire, l'hexadécimal ...  </a> </p> -->
+		<p> <a href="nsi_1_representation_1.pdf">  Représentation des entiers  </a> </p>
+		<p> <a href="nsi_1_representation_2.pdf">  Représentation des entiers  </a> </p>
+		<p> <a href="nsi_1_representation_3.pdf">  Représentation des entiers  </a> </p>
+		<p> <a class="video" href="https://youtube.com/channel/UCO0N4ExyrTAh4UdC14CZ5hQ">  Des vidéos pour mieux comprendre le binaire, l'hexadécimal ...  </a> </p>
 		
 		
 		
