--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -48,10 +48,19 @@
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
 		<p> <a class= "autre" href="nsi_t_flask.pdf"> Tuto Flask </a> </p>
+	
 
-    
+		<h2>La récursivité</h2>
+			
+		<p> <a href="nsi_t_rec_1.pdf">  Découvrir le principe de la récursivité </a> </p>
+		<p> <a href="nsi_t_rec_2.pdf">  Notion de récursivité </a> </p>
+		<p> <a class="td" href="nsi_t_rec_3.pdf">  Quelques exemples</a> </p>
+		<p> <a class= "td" href="nsi_t_rec_4.pdf">  Exercices </a> </p>
+		
+		
+    </div>
     <p id="footer">jb duthoit</p>
-  </div>
+  
   </body>
 </html>
 
@@ -81,15 +90,7 @@
 <!-- # Les projets -->
 <!-- # -[Le morpion](projet_morpion.pdf) -->
 
-<!-- # Les bases de données -->
 
-
-<!-- # |**Les bases de données**|||| -->
-<!-- # |:----------------:|:---------------:|:----------:|:-----| -->
-<!-- # ||*1*|[Le cours et les exos](nsi_t_bdd_1.pdf)|| -->
-<!-- # ||*2*|[Le cours et les exos](nsi_t_bdd_2.pdf)|| -->
-<!-- # ||*3*|[Le cours et les exos](nsi_t_bdd_3.pdf)|| -->
-<!-- # ||*4*|[Le cours et les exos](nsi_t_bdd_4.pdf)|| -->
 
 <!-- # Langage SQL -->
 
