--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -40,9 +40,9 @@
 		
 		<h2>Représentation des données</h2>
 			
-		<p> <a href="nsi_1_representation_1.pdf">  Représentation des entiers  </a> </p>
-		<p> <a href="nsi_1_representation_2.pdf">  Représentation des entiers  </a> </p>
-		<p> <a href="nsi_1_representation_3.pdf">  Représentation des entiers  </a> </p>
+		<p> <a href="nsi_1_representation_1.pdf">  Représentation des entiers positifs </a> </p>
+		<p> <a href="nsi_1_representation_2.pdf">  Représentation des entiers relatifs </a> </p>
+		<p> <a href="nsi_1_representation_3.pdf">  Représentation des réels </a> </p>
 		<p> <a class="video" href="https://youtube.com/channel/UCO0N4ExyrTAh4UdC14CZ5hQ">  Des vidéos pour mieux comprendre le binaire, l'hexadécimal ...  </a> </p>
 		
 		
