--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -53,7 +53,7 @@
 		<h2>La récursivité</h2>
 			
 		<p> <a href="nsi_t_rec_1.pdf">  Découvrir le principe de la récursivité </a> </p>
-		<p> <a href="nsi_t_rec_2.pdf">  Notion de récursivité </a> </p>
+		<p> <a href="nsi_t_rec_2.pdf">  La programmation récursive </a> </p>
 		<p> <a class="td" href="nsi_t_rec_3.pdf">  Quelques exemples</a> </p>
 		<p> <a class= "td" href="nsi_t_rec_4.pdf">  Exercices </a> </p>
 		
