--- a/m/1/index.html
+++ b/m/1/index.html
@@ -48,7 +48,7 @@
 		<p> <a class="autre" href="https://www.geogebra.org/m/re7scnj4", target="_blank">  Fichier Géogebra </a> </p>
 		<p> <a href="m_1_derivation_1.pdf", target="_blank">  Le nombre dérivé </a> </p>
 		<p> <a href="m_1_derivation_2.pdf", target="_blank">  Tangente à une courbe </a> </p>
-		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWlZMUp6REdNbHJjOXdPSDd5UmFNZ25SUVVqbmwzZWhCYVBkUnJTOVl2QVEiLCJ1c2VycyI6IkFub255bWUifQ==", target="_blank">  Tangente à une courbe </a> </p>
+		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWlZMUp6REdNbHJjOXdPSDd5UmFNZ25SUVVqbmwzZWhCYVBkUnJTOVl2QVEiLCJ1c2VycyI6IkFub255bWUifQ==", target="_blank">  QCM : Lecture du nombre dérivé</a> </p>
 		<p> <a href="m_1_derivation_3.pdf", target="_blank">  Nombre dérivé de fonctions usuelles </a> </p>
 
 
