--- a/m/1/index.html
+++ b/m/1/index.html
@@ -52,6 +52,12 @@
 		<p> <a href="m_1_derivation_3.pdf", target="_blank">  Nombre dérivé de fonctions usuelles </a> </p>
 
 
+		<h2>Les équations de droites (rappels) </h2>
+		
+		<p> <a href="m_1_eq_1.pdf", target="_blank">  Equations cartésiennes </a> </p>
+		<p> <a href="m_1_eq_2.pdf", target="_blank">  Equations réduites </a> </p>
+		<p> <a href="m_1_eq_3.pdf", target="_blank">  Positions relatives de droites </a> </p>
+		<p> <a href="m_1_eq_4.pdf", target="_blank">  Point d'intersections de deux droites sécantes </a> </p>
 		
 		
 		<!-- <h2>Partie 2 du second degré</h2> -->
