--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -35,6 +35,8 @@
 		<h2>S'entraîner à lépreuve pratique</h2>
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">Sujet 1</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">Sujet 2</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">Sujet 3</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">Sujet 4</a>
 		</p>
 	
 	
