--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -62,6 +62,13 @@
 		<p> <a class= "td" href="nsi_t_rec_4.pdf">  Exercices </a> </p>
 		
 		
+		
+		
+		<h2>Les dictionnaires</h2>
+			
+		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a href="nsi_t_dico_1.pdf">  Le cours de première </a> </p>
+		
+		
     </div>
     <p id="footer">jb duthoit</p>
   
