--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -44,8 +44,9 @@
 		<p> <a href="nsi_1_representation_2.pdf">  Représentation des entiers relatifs </a> </p>
 		<p> <a href="nsi_1_representation_3.pdf">  Représentation des réels </a> </p>
 		<p> <a class="video" href="https://youtube.com/channel/UCO0N4ExyrTAh4UdC14CZ5hQ">  Des vidéos pour mieux comprendre le binaire, l'hexadécimal ...  </a> </p>
-		
-		
+		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWJLX2M5VmIyY0xPZjFtMWxzYnlBeHRXTWJ6YU1vX0ZWVjZwNFEyTWd4UjQiLCJ1c2VycyI6IkFub255bWUifQ=="> Un qcm d'entraînement </a> </p>
+		<p> <a href="nsi_1_representation_4.pdf">  Représentation des caractères </a> </p>
+		<p> <a href="nsi_1_representation_5.pdf">  Les booléens </a> </p>
 		
 		
 		<!-- <h2>Les dictionnaires Python</h2> -->
@@ -65,11 +66,8 @@
 			
 			
 			
-		<!-- <h2>Liste par compréhension</h2> -->
-		
-		
-		
-		<!-- <p> <a href="nsi_1_ch6.pdf", target="_blank">  Le cours  </a> </p> -->
+		<h2>Liste par compréhension</h2>		
+		<p> <a href="nsi_1_comprehension.pdf", target="_blank">  Le cours  </a> </p>
 		
 		
 		<!-- <h2>HTML et CSS</h2> -->
