--- a/m/1/index.html
+++ b/m/1/index.html
@@ -60,9 +60,9 @@
 		<p> <a href="m_1_eq_4.pdf", target="_blank">  Point d'intersections de deux droites sécantes </a> </p>
 		
 		
-		<!-- <h2>Partie 2 du second degré</h2> -->
+		<h2>Partie 2 du second degré</h2>
 		
-		<!-- <p> <a href="m_1_ch5.pdf", target="_blank">  Le cours et les savoir-faire </a> </p> -->
+		<p> <a href="m_1_sec_part2_1.pdf", target="_blank">  Le cours et les savoir-faire </a> </p>
 		
 			
 			
