--- a/m/2/index.html
+++ b/m/2/index.html
@@ -85,7 +85,9 @@
 		<p> <a class="td" href="m_2_python_2.pdf", target="_blank">  L'instruction conditionnelle  </a> </p>
 		<!-- <p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p> -->
 			
-			
+		<h2> TDs </h2>
+		
+		<p> <a class="td" href="m_2_identites.pdf", target="_blank">  Identités remarquables  </a> </p>
 			
     </div>
     
