--- a/m/1/index.html
+++ b/m/1/index.html
@@ -62,8 +62,10 @@
 		
 		<h2>Partie 2 du second degré</h2>
 		
-		<p> <a href="m_1_sec_part2_1.pdf", target="_blank">  Le cours et les savoir-faire </a> </p>
-		
+		<p> <a href="m_1_sec_part2_1.pdf", target="_blank">  Rappels </a> </p>
+		<p> <a href="m_1_sec_part2_2.pdf", target="_blank">  Résolution de l'équation trinôme</a> </p>
+		<p> <a href="m_1_sec_part2_3.pdf", target="_blank">  Signe et factorisation</a> </p>
+		<p> <a href="m_1_sec_part2_4.pdf", target="_blank">  Somme et produit des racines</a> </p>
 			
 			
 			
