--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -49,10 +49,10 @@
 		<p> <a href="nsi_1_representation_5.pdf">  Les booléens </a> </p>
 		
 		
-		<!-- <h2>Les dictionnaires Python</h2> -->
+		<h2>Les dictionnaires Python</h2>
 		
-		<!-- <p> <a href="nsi_1_ch3.pdf">  Le cours et les savoir-faire  </a> </p> -->
-		
+		<p> <a href="nsi_1_dico_1.pdf">  Qu'est ce qu'un dictionnaire ?  </a> </p>
+		<p> <a href="nsi_1_dico_2.pdf">  Méthodes associées et exercices  </a> </p>
 
 		<!-- <h2>Algorithmie</h2> -->
 		
