--- a/m/2/index.html
+++ b/m/2/index.html
@@ -87,7 +87,8 @@
 			
 		<h2> TDs </h2>
 		
-		<p> <a class="td" href="m_2_identites.pdf", target="_blank">  Identités remarquables  </a> </p>
+		<p> <a class="td" href="m_2_identites.pdf", target="_blank">  Développer avec les identités remarquables  </a> </p>
+		<p> <a class="td" href="m_2_factorisations.pdf", target="_blank">  Factorisations  </a> </p>
 			
     </div>
     
