--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -40,6 +40,7 @@
 		</p>
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">Sujet 5</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">Sujet 7</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">Sujet 13</a>
 		</p>
 	
 	
