--- a/m/2/index.html
+++ b/m/2/index.html
@@ -33,9 +33,9 @@
 		<p> <a href="m_2_ch1_4.pdf">  Les racines carrées  </a> </p>
 		<p> <a href="m_2_ch1_5.pdf">  La valeur absolue  </a> </p>
 		
-		<!-- <h2>Généralités sur les fonctions</h2> -->
+		<h2>Généralités sur les fonctions</h2>
 			
-		<!-- <p> <a href="m_2_ch2.pdf">  Le cours  </a> </p> -->
+		<p> <a href="m_2_generalites_fonctions.pdf">  La notion de fonction </a> </p>
 		<!-- <h2>Les vecteurs du plan</h2> -->
 		
 		<!-- <p> <a href="m_2_ch3.pdf">  Le cours  </a> </p> -->
