--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -72,6 +72,14 @@
 		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  (Le cours de première) </a> </p>
 		
 		
+		
+		<h2>La Programmation Orientée Objet</h2>
+			
+		<p> <a href="nsi_t_poo_1.pdf">  Découvrir le principe de la POO</a> </p>
+		<p> <a href="nsi_t_poo_2.pdf">  La POO sur un exemple (+ exercices) </a> </p>
+		<p> <a class="td" href="nsi_t_poo_3.pdf">  L'agrégation de classes </a> </p>
+
+		
     </div>
     <p id="footer">jb duthoit</p>
   
