--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -41,6 +41,12 @@
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">Sujet 5</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">Sujet 7</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">Sujet 13</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">Sujet 14</a>
+		</p>
+		<p>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_16.ipynb">Sujet 16</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">Sujet 17</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">Sujet 18</a>
 		</p>
 	
 	
