--- a/m/2/index.html
+++ b/m/2/index.html
@@ -83,6 +83,7 @@
 		<p> <a class = "autre" href="py2.gif", target="_blank">  Mémento Python (SI ALORS, POUR , TANT QUE , les fonctions ...) </a> </p>
 		<p> <a class="td" href="m_2_python_1.pdf", target="_blank">  prise en main de Python  </a> </p>
 		<p> <a class="td" href="m_2_python_2.pdf", target="_blank">  L'instruction conditionnelle  </a> </p>
+		<p> <a class="td" href="m_2_python_3.pdf", target="_blank">  Les fonctions python </a> </p>
 		<!-- <p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p> -->
 			
 		<h2> TDs </h2>
