--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -33,6 +33,7 @@
 	
 	<div id="contenu_cours">
 		<h2>S'entraîner à lépreuve pratique</h2>
+		<p> <a href="liste_2021.pdf"> Liste des sujets 2021 par thème</a> </p>
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">Sujet 1</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">Sujet 2</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">Sujet 3</a>
