--- a/m/1/index.html
+++ b/m/1/index.html
@@ -66,7 +66,14 @@
 		<p> <a href="m_1_sec_part2_2.pdf", target="_blank">  Résolution de l'équation trinôme</a> </p>
 		<p> <a href="m_1_sec_part2_3.pdf", target="_blank">  Signe et factorisation</a> </p>
 		<p> <a href="m_1_sec_part2_4.pdf", target="_blank">  Somme et produit des racines</a> </p>
-			
+		
+
+		<h2>Probabilités conditionnelles</h2>
+		
+		<p> <a href="m_1_proba_cond_1.pdf", target="_blank">  Rappels de seconde </a> </p>
+		<p> <a href="m_1_proba_cond_2.pdf", target="_blank">  Probabilités conditionnelles</a> </p>
+		<p> <a href="m_1_proba_cond_3.pdf", target="_blank">  Formules des probabilités totales</a> </p>
+		<p> <a href="m_1_proba_cond41.pdf", target="_blank">  Indépendance </a> </p>		
 			
 			
 		<!-- <h2>Les fonctions dérivées</h2> -->
