--- a/m/1/index.html
+++ b/m/1/index.html
@@ -73,7 +73,7 @@
 		<p> <a href="m_1_proba_cond_1.pdf", target="_blank">  Rappels de seconde </a> </p>
 		<p> <a href="m_1_proba_cond_2.pdf", target="_blank">  Probabilités conditionnelles</a> </p>
 		<p> <a href="m_1_proba_cond_3.pdf", target="_blank">  Formules des probabilités totales</a> </p>
-		<p> <a href="m_1_proba_cond41.pdf", target="_blank">  Indépendance </a> </p>		
+		<p> <a href="m_1_proba_cond_4.pdf", target="_blank">  Indépendance </a> </p>		
 			
 			
 		<!-- <h2>Les fonctions dérivées</h2> -->
