--- a/m/2/index.html
+++ b/m/2/index.html
@@ -36,6 +36,7 @@
 		<h2>Généralités sur les fonctions</h2>
 			
 		<p> <a href="m_2_generalites_fonctions_1.pdf">  La notion de fonction </a> </p>
+		<p> <a href="m_2_generalites_fonctions_2.pdf">  Courbe représentative de fonction </a> </p>
 		<!-- <h2>Les vecteurs du plan</h2> -->
 		
 		<!-- <p> <a href="m_2_ch3.pdf">  Le cours  </a> </p> -->
