--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -49,6 +49,11 @@
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">Sujet 17</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">Sujet 18</a>
 		</p>
+		<p>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">Sujet 15</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">Sujet 24</a>
+		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">Sujet 25</a>
+		</p>
 	
 	
 	
