--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -35,30 +35,39 @@
 		<h2>S'entraîner à lépreuve pratique</h2>
 		<p> <a href="liste_2021.pdf"> Liste des sujets 2021 par thème</a> </p>
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_1.ipynb">1</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">2</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">3</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">4</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">5</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_2.ipynb">2</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_3.ipynb">3</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_4.ipynb">4</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_5.ipynb">5</a>
 		<a class= "autre" >6</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">7</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_7.ipynb">7</a>
 		<a class= "autre" >8</a>
 		<a class= "autre" >9</a>
 		<a class= "autre" >10</a>
-		<a class= "autre" >11</a>
-		<a class= "autre" >12</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">13</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">14</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">15</a>
 		</p>
 		<p>
-		
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_16.ipynb">16</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">17</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">18</a>
-	
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a>
+		<a class= "autre" >11</a>
+		<a class= "autre" >12</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_13.ipynb">13</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_14.ipynb">14</a>
+		<a class= "autre" style="color: #8ebf42"  href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_15.ipynb">15</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_16.ipynb">16</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_17.ipynb">17</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_18.ipynb">18</a>
+		<a class= "autre" >19</a>
+		<a class= "autre" >20</a>
+		</p>
+		<p>
+		<a class= "autre" >21</a>
+		<a class= "autre" >22</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_23.ipynb">23</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_24.ipynb">24</a>
+		<a class= "autre" style="color: #8ebf42" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/epp_25.ipynb">25</a>
+		<a class= "autre" >26</a>
+		<a class= "autre" >27</a>
+		<a class= "autre" >28</a>
+		<a class= "autre" >29</a>
+		<a class= "autre" >30</a>
 		</p>
 	
 	
