--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -59,10 +59,14 @@
 		<!-- <p> <a href="nsi_1_ch4.pdf", target="_blank"> Les bases de l'algorithmie </a> </p> -->
 		
 		
-		<!-- <h2>Architecture matérielle</h2> -->
+		<h2>Architecture matérielle</h2>
 		
-		<!-- <p> <a href="nsi_1_ch5.pdf", target="_blank">  Le cours et les savoir-faire </a> </p> -->
-		
+		<p> <a href="nsi_1_archi_1.pdf", target="_blank">  Les circuits intégrés </a> </p>
+		<p> <a href="nsi_1_archi_2.pdf", target="_blank">  A l'intérieur d'une unité centrale </a> </p>
+		<p> <a href="nsi_1_archi_3.pdf", target="_blank">  Le modèle de Von Newman </a> </p>
+		<p> <a href="nsi_1_archi_4.pdf", target="_blank">  Les différents langages </a> </p>
+		<p> <a href="nsi_1_archi_5.pdf", target="_blank">  Simulation d'un CPU </a> </p>
+
 			
 			
 			
