--- a/m/1/index.html
+++ b/m/1/index.html
@@ -66,7 +66,7 @@
 		<p> <a href="m_1_sec_part2_2.pdf", target="_blank">  Résolution de l'équation trinôme</a> </p>
 		<p> <a href="m_1_sec_part2_3.pdf", target="_blank">  Signe et factorisation</a> </p>
 		<p> <a href="m_1_sec_part2_4.pdf", target="_blank">  Somme et produit des racines</a> </p>
-		
+		<p> <a class = "autre" href="m_1_sec_part2_cm.png", target="_blank">  Carte mentale</a> </p>
 
 		<h2>Probabilités conditionnelles</h2>
 		
