--- a/m/2/index.html
+++ b/m/2/index.html
@@ -37,6 +37,7 @@
 			
 		<p> <a href="m_2_generalites_fonctions_1.pdf">  La notion de fonction </a> </p>
 		<p> <a href="m_2_generalites_fonctions_2.pdf">  Courbe représentative de fonction </a> </p>
+		<p> <a class="qcm" href= "https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMVZCYXo2QUxueWlSLWJRQVptVlllZHpqRV9zalNqZFVkT3RDa3NaTk9NbkUiLCJ1c2VycyI6IkFub255bWUifQ=="> QCM Lectures graphiques ! </a> </p>
 		
 		
 		<!-- <h2>Les vecteurs du plan</h2> -->
@@ -87,6 +88,7 @@
 		<p> <a class="td" href="m_2_python_1.pdf", target="_blank">  prise en main de Python  </a> </p>
 		<p> <a class="td" href="m_2_python_2.pdf", target="_blank">  L'instruction conditionnelle  </a> </p>
 		<p> <a class="td" href="m_2_python_3.pdf", target="_blank">  Les fonctions python </a> </p>
+		<p> <a class="td" href="m_2_python_turtle.pdf", target="_blank">  Dessiner avec python </a> </p>
 		<!-- <p> <a class="td" href="m_2_python_4.pdf", target="_blank">  Comprendre la boucle TANT QUE  </a> </p> -->
 			
 		<h2> TDs </h2>
