--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -105,7 +105,15 @@
 		<p> <a href="nsi_t_poo_1.pdf">  Découvrir le principe de la POO</a> </p>
 		<p> <a href="nsi_t_poo_2.pdf">  La POO sur un exemple (+ exercices) </a> </p>
 		<p> <a class="td" href="nsi_t_poo_3.pdf">  L'agrégation de classes </a> </p>
-
+		
+		
+		<h2>Les structures linéaires</h2>
+			
+		<p> <a href="nsi_t_sl_1.pdf">Types abstraits...</a> </p>
+		<p> <a href="nsi_t_sl_2.pdf">Comment implémenter une liste ?</a> </p>
+		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
+		<p> <a href="nsi_t_sl_3.pdf">Opération avec les listes chaînées</a> </p>
+		<p> <a href="nsi_t_sl_3.pdf">Implémentation des piles et des files</a> </p>
 		
     </div>
     <p id="footer">jb duthoit</p>
