--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -66,6 +66,7 @@
 		<p> <a href="nsi_1_archi_3.pdf", target="_blank">  Le modèle de Von Newman </a> </p>
 		<p> <a href="nsi_1_archi_4.pdf", target="_blank">  Les différents langages </a> </p>
 		<p> <a href="nsi_1_archi_5.pdf", target="_blank">  Simulation d'un CPU </a> </p>
+		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUJCUUlobkRzRGRTTm1MbzVmQXFOYzJENTZseGp4MEMzQWZfTzNMbkJYbGsiLCJ1c2VycyI6IkFub255bWUifQ==" > S'entraîner avec l'IE de l'an passé !</a></p>
 
 			
 			
