--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -112,8 +112,8 @@
 		<p> <a href="nsi_t_sl_1.pdf">Types abstraits...</a> </p>
 		<p> <a href="nsi_t_sl_2.pdf">Comment implémenter une liste ?</a> </p>
 		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
-		<p> <a href="nsi_t_sl_3.pdf">Opération avec les listes chaînées</a> </p>
-		<p> <a href="nsi_t_sl_3.pdf">Implémentation des piles et des files</a> </p>
+		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
+		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
 		
     </div>
     <p id="footer">jb duthoit</p>
