--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -68,7 +68,10 @@
 		<p> <a href="nsi_1_archi_5.pdf", target="_blank">  Simulation d'un CPU </a> </p>
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMUJCUUlobkRzRGRTTm1MbzVmQXFOYzJENTZseGp4MEMzQWZfTzNMbkJYbGsiLCJ1c2VycyI6IkFub255bWUifQ==" > S'entraîner avec l'IE de l'an passé !</a></p>
 
-			
+			<h2>Algorithmes</h2>
+		
+		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro </a> </p>
+		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Algo 1 </a> </p>
 			
 			
 		<h2>Liste par compréhension</h2>		
