--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -70,8 +70,8 @@
 
 			<h2>Algorithmes</h2>
 		
-		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro </a> </p>
-		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Algo 1 </a> </p>
+		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro sur les algorithmes</a> </p>
+		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Recherches de valeurs dans un tableau</a> </p>
 			
 			
 		<h2>Liste par compréhension</h2>		
