--- a/m/1/index.html
+++ b/m/1/index.html
@@ -77,8 +77,11 @@
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ=="> QCM pour réviser le cours </a> </p>
 		<p> <a class="metier" href="../metiers_maths.pdf"> Découvrir le métier de Biochimiste </p>
 			
-		<!-- <h2>Les fonctions dérivées</h2> -->
-		
+		<h2>Les fonctions dérivées</h2>
+		<p> <a href="m_1_fonction_derivee_1.pdf", target="_blank">  La notion de fonction dérivée </a> </p>
+		<p> <a href="m_1_fonction_derivee_2.pdf", target="_blank">  Opérations sur les fonctions dérivées </a> </p>
+		<p> <a href="m_1_fonction_derivee_3.pdf", target="_blank">  Lien entre signe de f' et sens de variation de f </a> </p>
+		<p> <a href="m_1_fonction_derivee_4.pdf", target="_blank">  Extrema d'une fonction </a> </p>
 		
 		
 		<!-- <p> <a href="m_1_ch6.pdf", target="_blank">  Le cours  </a> </p> -->
