--- a/m/1/index.html
+++ b/m/1/index.html
@@ -75,8 +75,9 @@
 		<p> <a href="m_1_proba_cond_3.pdf", target="_blank">  Formules des probabilités totales</a> </p>
 		<p> <a href="m_1_proba_cond_4.pdf", target="_blank">  Indépendance </a> </p>		
 		<p> <a class="qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMWtiRmhCZnBkM3htWTNLSjdwcTBfTGdrU3lIQWVnVWp5a3Y1NjJCR2JGLVUiLCJ1c2VycyI6IkFub255bWUifQ=="> QCM pour réviser le cours </a> </p>
-		<p> <a class="metier" href="../metiers_maths.pdf"> Découvrir le métier de Biochimiste </p>
-			
+		<p> <a class="metier" href="../metiers_maths.pdf"> Découvrir le métier de Biochimiste </a> </p>
+		
+		
 		<h2>Les fonctions dérivées</h2>
 		<p> <a href="m_1_fonction_derivee_1.pdf", target="_blank">  La notion de fonction dérivée </a> </p>
 		<p> <a href="m_1_fonction_derivee_2.pdf", target="_blank">  Opérations sur les fonctions dérivées </a> </p>
