--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -114,7 +114,7 @@
 		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
 		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
 		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
-		
+		p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
     </div>
     <p id="footer">jb duthoit</p>
   
